fixed dashboard alignment

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -95,6 +95,7 @@ html, body {
   padding: 20px;
   margin-top: 2.5rem;
   margin-right: 1rem;
+  margin-left: -7rem;
 
 }
 
